--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="mailto:willis.rh@gmail.com">willis.rh@gmail.com</a>
           </li>
           <li><a href="http://richardwillis.info">richardwillis.info</a></li>
-          <li>0044 7954216809</li>
+          <li>+44 7954216809</li>
           <li>Yorkshire, UK</li>
         </ul>
       </header>
@@ -40,7 +40,7 @@
       </section>
 
       <section class="section experience list">
-        <div><h2>Work Experience</h2></div>
+        <h2>Work Experience</h2>
         <div class="content-container">
           <section class="content-block">
             <header class="header">
@@ -49,9 +49,9 @@
                   Senior Software Engineer
                 </h3>
               </div>
-              <div class="date">
-                August 2019 &ndash; Current
-              </div>
+              <p class="date">
+                Aug 2019 &ndash; Current
+              </p>
             </header>
             <p class="company">
               <a href="https://www.skyscanner.net/">Skyscanner</a>
@@ -79,9 +79,9 @@
                   Software Engineer
                 </h3>
               </div>
-              <div class="date">
-                April 2016 &ndash; July 2019
-              </div>
+              <p class="date">
+                Apr 2016 &ndash; July 2019
+              </p>
             </header>
             <p class="company">
               <a href="https://www.skyscanner.net/">Skyscanner</a>
@@ -108,9 +108,9 @@
                   Senior User Interface Developer
                 </h3>
               </div>
-              <div class="date">
-                Nov 2014 &ndash; April 2016
-              </div>
+              <p class="date">
+                Nov 2014 &ndash; Apr 2016
+              </p>
             </header>
             <p class="company">
               <a href="https://fath.om/">Fathom London Ltd</a>
@@ -130,9 +130,9 @@
                   Senior User Interface Developer
                 </h3>
               </div>
-              <div class="date">
-                July 2013 &ndash; October 2014
-              </div>
+              <p class="date">
+                Jul 2013 &ndash; Oct 2014
+              </p>
             </header>
             <p class="title">
               <a href="https://www.abehr.com/oe-foundation">
@@ -157,9 +157,9 @@
                   Principle User Interface developer
                 </h3>
               </div>
-              <div class="date">
-                September 2012 &ndash; June 2013
-              </div>
+              <p class="date">
+                Sep 2012 &ndash; Jun 2013
+              </p>
             </header>
             <p class="title">
               <a href="https://www.possible.com/">
@@ -181,9 +181,9 @@
                   User Interface developer
                 </h3>
               </div>
-              <div class="date">
-                September 2010 &ndash; August 2012
-              </div>
+              <p class="date">
+                Sep 2010 &ndash; Aug 2012
+              </p>
             </header>
             <p class="title">
               <a href="https://www.possible.com/">Fortune Cookie</a>
@@ -200,9 +200,9 @@
                   Deputy development team manager
                 </h3>
               </div>
-              <div class="date">
-                August 2009 &ndash; August 2010
-              </div>
+              <p class="date">
+                Aug 2009 &ndash; Aug 2010
+              </p>
             </header>
             <p class="title">
               <a href="https://www.uxblondon.com/">
@@ -221,9 +221,9 @@
                   Web Developer
                 </h3>
               </div>
-              <div class="date">
-                February 2008 &ndash; August 2009
-              </div>
+              <p class="date">
+                Feb 2008 &ndash; Aug 2009
+              </p>
             </header>
             <p class="title">
               <a href="https://www.uxblondon.com/">
@@ -244,9 +244,9 @@
               <div class="overview">
                 <h3 class="title">Web Developer</h3>
               </div>
-              <div class="date">
-                February 2007 &ndash; December 2007
-              </div>
+              <p class="date">
+                Feb 2007 &ndash; Dec 2007
+              </p>
             </header>
             <p class="company">Franz du Plessis Advertising and Design</p>
             <ul>
@@ -262,9 +262,9 @@
               <div class="overview">
                 <h3 class="title">Human Resources Assistant</h3>
               </div>
-              <div class="date">
-                February 2005 &ndash; December 2005
-              </div>
+              <p class="date">
+                Feb 2005 &ndash; Dec 2005
+              </p>
             </header>
             <p class="company">
               <a href="https://www.slam.nhs.uk/"
@@ -291,14 +291,12 @@
                   Data Capturer / Content Editor
                 </h3>
                 <p class="company">
-                  <a href="https://www.csir.co.za/"
-                    >CSIR (Council for Scientific and Industrial Research)</a
-                  >
+                  <a href="https://www.csir.co.za/">CSIR</a>
                 </p>
               </div>
-              <div class="date">
-                January 2002 &ndash; January 2003
-              </div>
+              <p class="date">
+                Jan 2002 &ndash; Jan 2003
+              </p>
             </header>
             <ul>
               <li>
@@ -319,9 +317,9 @@
               <div class="overview">
                 <h3 class="company">Computer Training Institute</h3>
               </div>
-              <div class="date">
-                January 2006 &ndash; January 2007
-              </div>
+              <p class="date">
+                Jan 2006 &ndash; Jan 2007
+              </p>
             </header>
             <p>
               BTEC Higher National Diploma in Computing (Software Development)
@@ -337,9 +335,9 @@
               <div class="overview">
                 <h3 class="company">St David’s Marist Brothers</h3>
               </div>
-              <div class="date">
-                January 1994 &ndash; December 2001
-              </div>
+              <p class="date">
+                Jan 1994 &ndash; Dec 2001
+              </p>
             </header>
             <p>High-School - Matriculation (Grade 12)</p>
             <p>
@@ -397,8 +395,9 @@
         <h2>Open-source Projects</h2>
         <div class="content-block">
           <p>
-            Whilst most of my best work is private & owned by the companies I've worked
-            for, I do occasionally find the time to works on personal projects:
+            Whilst most of my best work is private & owned by the companies I've
+            worked for, I do occasionally find the time to works on personal
+            projects:
           </p>
           <ul>
             <li>
@@ -507,7 +506,7 @@
         <div class="content-block">
           <ul>
             <li>Cycling</li>
-            <li>Climbing / Bouldering</li>
+            <li>Climbing, Bouldering</li>
             <li>Hiking, Scrambling</li>
             <li>Trail Running</li>
           </ul>
@@ -517,7 +516,7 @@
         <p>
           Richard Willis -
           <a href="mailto:willis.rh@gmail.com">willis.rh@gmail.com</a>
-          - <a href="http://richardwillis.info">richardwillis.info</a> - 0044
+          - <a href="http://richardwillis.info">richardwillis.info</a> - +44
           7954216809
         </p>
         <p>
