--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
               <a href="https://www.skyscanner.net/">Skyscanner</a>
             </p>
             <p>
-              Development of internal advertising & sponsored content platforms.
+              Full-stack development of internal advertising & sponsored content
+              platforms.
             </p>
             <ul>
               <li>Architecture design & guidance</li>
@@ -87,8 +88,8 @@
               <a href="https://www.skyscanner.net/">Skyscanner</a>
             </p>
             <p>
-              Development of various systems to integrate regional features
-              across the product
+              Full-stack development of various systems to integrate regional
+              features across the product.
             </p>
             <ul>
               <li>
@@ -141,8 +142,8 @@
             </p>
             <ul>
               <li>
-                Full-stack development of an open-source Electronic Patient
-                Record system used by the Moorfields Eye Hospital
+                Full-stack development (LAMP) of an open-source Electronic
+                Patient Record system used by the Moorfields Eye Hospital
               </li>
               <li>
                 Development of a MVP SPA (AngularJS) in collaboration with a
@@ -304,11 +305,11 @@
             </header>
             <ul>
               <li>
-                Migrating hard-copy reports into a mining portal system, working
-                alongside .NET developers
+                Migration of hard-copy reports into a mining portal system,
+                working alongside .NET developers
               </li>
               <li>Minor development tasks on the portal</li>
-              <li>Creating micro-sites for the company intranet</li>
+              <li>Development of micro-sites for the company intranet</li>
             </ul>
           </section>
         </div>
@@ -528,6 +529,12 @@
             <li>Hiking, Scrambling</li>
             <li>Trail Running</li>
           </ul>
+          <p>
+            (View my
+            <a href="https://www.wikiloc.com/wikiloc/user.do?id=2145109"
+              >recorded routes</a
+            >.)
+          </p>
           <h3>Blog posts</h3>
           <ul>
             <li>
