--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
               </p>
             </header>
             <p class="company">
-              <a href="https://www.skyscanner.net/">Skyscanner</a>
+              <a rel="nofollow" href="https://www.skyscanner.net/"
+                >Skyscanner</a
+              >
             </p>
             <p>
               Full-stack development of internal advertising & sponsored content
@@ -85,7 +87,9 @@
               </p>
             </header>
             <p class="company">
-              <a href="https://www.skyscanner.net/">Skyscanner</a>
+              <a rel="nofollow" href="https://www.skyscanner.net/"
+                >Skyscanner</a
+              >
             </p>
             <p>
               Full-stack development of various systems to integrate regional
@@ -114,7 +118,7 @@
               </p>
             </header>
             <p class="company">
-              <a href="https://fath.om/">Fathom London Ltd</a>
+              <a rel="nofollow" href="https://fath.om/">Fathom London Ltd</a>
             </p>
             <ul>
               <li>
@@ -136,7 +140,7 @@
               </p>
             </header>
             <p class="title">
-              <a href="https://www.abehr.com/oe-foundation">
+              <a rel="nofollow" href="https://www.abehr.com/oe-foundation">
                 OpenEyes Foundation
               </a>
             </p>
@@ -163,7 +167,7 @@
               </p>
             </header>
             <p class="title">
-              <a href="https://www.possible.com/">
+              <a rel="nofollow" href="https://www.possible.com/">
                 Possible Worldwide
               </a>
             </p>
@@ -187,7 +191,9 @@
               </p>
             </header>
             <p class="title">
-              <a href="https://www.possible.com/">Fortune Cookie</a>
+              <a rel="nofollow" href="https://www.possible.com/"
+                >Fortune Cookie</a
+              >
             </p>
             <ul>
               <li>Front-end development on various high profile websites</li>
@@ -206,7 +212,7 @@
               </p>
             </header>
             <p class="title">
-              <a href="https://www.uxblondon.com/">
+              <a rel="nofollow" href="https://www.uxblondon.com/">
                 Hoop Associates
               </a>
             </p>
@@ -227,7 +233,7 @@
               </p>
             </header>
             <p class="title">
-              <a href="https://www.uxblondon.com/">
+              <a rel="nofollow" href="https://www.uxblondon.com/">
                 Hoop Associates
               </a>
             </p>
@@ -268,7 +274,7 @@
               </p>
             </header>
             <p class="company">
-              <a href="https://www.slam.nhs.uk/"
+              <a rel="nofollow" href="https://www.slam.nhs.uk/"
                 >NHS Trust Recruitment Campaigns Team</a
               >
             </p>
@@ -296,7 +302,7 @@
                   Data Capturer / Content Editor
                 </h3>
                 <p class="company">
-                  <a href="https://www.csir.co.za/">CSIR</a>
+                  <a rel="nofollow" href="https://www.csir.co.za/">CSIR</a>
                 </p>
               </div>
               <p class="date">
@@ -385,15 +391,21 @@
         <div class="content-block">
           <ul>
             <li>
-              <a href="http://github.com/badsyntax">GitHub Profile</a>
+              <a rel="nofollow" href="http://github.com/badsyntax"
+                >GitHub Profile</a
+              >
             </li>
             <li>
-              <a href="http://stackoverflow.com/users/492325/badsyntax"
+              <a
+                rel="nofollow"
+                href="http://stackoverflow.com/users/492325/badsyntax"
                 >StackOverflow Profile</a
               >
             </li>
             <li>
-              <a href="http://uk.linkedin.com/in/willisrh">LinkedIn Profile</a>
+              <a rel="nofollow" href="http://uk.linkedin.com/in/willisrh"
+                >LinkedIn Profile</a
+              >
             </li>
           </ul>
         </div>
@@ -408,99 +420,129 @@
           </p>
           <ul>
             <li>
-              <a href="https://github.com/badsyntax/vscode-gradle"
+              <a
+                rel="nofollow"
+                href="https://github.com/badsyntax/vscode-gradle"
                 >vscode-gradle</a
               >
               (Java, TypeScript, Node.js)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/vscode-spotless-gradle"
+              <a
+                rel="nofollow"
+                href="https://github.com/badsyntax/vscode-spotless-gradle"
                 >vscode-spotless-gradle</a
               >
               (TypeScript, Node.js)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/hyperapp-starter-project"
+              <a
+                rel="nofollow"
+                href="https://github.com/badsyntax/hyperapp-starter-project"
                 >hyperapp-starter-project</a
               >
               (JavaScript)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/gr-20">gr-20</a> (React)
-            </li>
-            <li>
-              <a href="https://github.com/badsyntax/react-seed">react-seed</a>
+              <a rel="nofollow" href="https://github.com/badsyntax/gr-20"
+                >gr-20</a
+              >
               (React)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/map-route">map-route</a>
+              <a rel="nofollow" href="https://github.com/badsyntax/react-seed"
+                >react-seed</a
+              >
+              (React)
+            </li>
+            <li>
+              <a rel="nofollow" href="https://github.com/badsyntax/map-route"
+                >map-route</a
+              >
               (Knockout.js, PHP)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/SassBeautify"
+              <a rel="nofollow" href="https://github.com/badsyntax/SassBeautify"
                 >SassBeautify</a
               >
               (Python)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/atom-sassbeautify"
+              <a
+                rel="nofollow"
+                href="https://github.com/badsyntax/atom-sassbeautify"
                 >atom-sassbeautify</a
               >
               (JavaScript)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/badsyntax.co"
+              <a rel="nofollow" href="https://github.com/badsyntax/badsyntax.co"
                 >badsyntax.co</a
               >
               (Node.js)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/xen">xen</a> (Node.js)
-            </li>
-            <li>
-              <a href="https://github.com/badsyntax/staticx">staticx</a>
+              <a rel="nofollow" href="https://github.com/badsyntax/xen">xen</a>
               (Node.js)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/handlebars-form-helpers"
+              <a rel="nofollow" href="https://github.com/badsyntax/staticx"
+                >staticx</a
+              >
+              (Node.js)
+            </li>
+            <li>
+              <a
+                rel="nofollow"
+                href="https://github.com/badsyntax/handlebars-form-helpers"
                 >handlebars-form-helpers</a
               >
               (JavaScript)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/polymer-twitter"
+              <a
+                rel="nofollow"
+                href="https://github.com/badsyntax/polymer-twitter"
                 >polymer-twitter</a
               >
               (Web components)
             </li>
             <li>
-              <a href="https://github.com/proxima-cms">proxima-cms</a>
+              <a rel="nofollow" href="https://github.com/proxima-cms"
+                >proxima-cms</a
+              >
               (PHP)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/jquery-spellchecker"
+              <a
+                rel="nofollow"
+                href="https://github.com/badsyntax/jquery-spellchecker"
                 >jquery-spellchecker</a
               >
               (JavaScript)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/mp3-arrange">mp3-arrange</a>
+              <a rel="nofollow" href="https://github.com/badsyntax/mp3-arrange"
+                >mp3-arrange</a
+              >
               (JavaScript)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/itunes-utils"
+              <a rel="nofollow" href="https://github.com/badsyntax/itunes-utils"
                 >itunes-utils</a
               >
               (Shell, AppleScript)
             </li>
             <li>
-              <a href="https://github.com/openeyes/poc-frontend"
+              <a rel="nofollow" href="https://github.com/openeyes/poc-frontend"
                 >openeyes/poc-frontend</a
               >
               (Angular)
             </li>
             <li>
-              <a href="https://github.com/badsyntax/express-project-boilerplate"
+              <a
+                rel="nofollow"
+                href="https://github.com/badsyntax/express-project-boilerplate"
                 >express-project-boilerplate</a
               >
               (Node.js)
@@ -520,7 +562,7 @@
           </ul>
           <h3>Photos</h3>
           <ul>
-            <li><a href="/photos">View photos</a></li>
+            <li><a rel="nofollow" href="/photos">View photos</a></li>
           </ul>
           <h3>Hobbies</h3>
           <ul>
@@ -531,7 +573,9 @@
           </ul>
           <p>
             (View my
-            <a href="https://www.wikiloc.com/wikiloc/user.do?id=2145109"
+            <a
+              rel="nofollow"
+              href="https://www.wikiloc.com/wikiloc/user.do?id=2145109"
               >recorded routes</a
             >.)
           </p>
@@ -547,17 +591,24 @@
           <h3>Videos</h3>
           <ul>
             <li>
-              <a href="https://www.youtube.com/watch?v=fINMgqUvwv4">
+              <a
+                rel="nofollow"
+                href="https://www.youtube.com/watch?v=fINMgqUvwv4"
+              >
                 Nuria Winter Trekking</a
               >
             </li>
             <li>
-              <a href="https://www.youtube.com/watch?v=hN3NqJaeNjc"
+              <a
+                rel="nofollow"
+                href="https://www.youtube.com/watch?v=hN3NqJaeNjc"
                 >Scrambling in Montserrat 1</a
               >
             </li>
             <li>
-              <a href="https://www.youtube.com/watch?v=uwZQulExNAs"
+              <a
+                rel="nofollow"
+                href="https://www.youtube.com/watch?v=uwZQulExNAs"
                 >Scrambling in Montserrat 2</a
               >
             </li>
