--- a/index.html
+++ b/index.html
@@ -283,10 +283,14 @@
                 Carry out the specifications of the HR Recruitment Procedures
               </li>
               <li>
-                I came on-board as a temp and was able to understand and improve
-                on the various HR processes. I streamlined various process and
-                created a process handbook which was used for a while after I
-                left.
+                I joined as a temp and was able to understand and improve on the
+                various HR processes. I created a procedure handbook which was
+                used for a while after I left.
+              </li>
+              <li>
+                I enjoyed this role as I could see the outcome of my efforts by
+                getting great feedback from nurses who appreciated me helping
+                them through the various processes to get employed by the NHS.
               </li>
               <li>
                 While doing this role I decided I wanted to pursue a career in
