--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
           <section class="content-block">
             <header class="header">
               <div class="overview">
-                <h3 class="company">Computer Training Institute</h3>
+                <h3 class="company">Computer Training Institute, South Africa</h3>
               </div>
               <p class="date">
                 Jan 2006 &ndash; Jan 2007
