--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
         <h2>Profile</h2>
         <div class="content-block">
           <p>
-            I'm an software engineer with over 10 years of professional work
+            I am a software engineer with over 10 years professional work
             experience, specialising in full-stack web development.
           </p>
           <p>
-            I care for code quality, consistency, simplicity and readability.
-            I'm adaptable, reliable and have a willingness to learn.
+            I am passionate about code quality, consistency, simplicity and
+            readability. I am adaptable, reliable and willing to learn.
+          </p>
+          <p>
+            I am a team player and have worked closely in the past with
+            designers, developers, projects manager & UX. I am able to pair
+            program and also work on my own to troubleshoot problems.
           </p>
         </div>
       </section>
@@ -57,13 +62,14 @@
               <a rel="nofollow" href="https://www.skyscanner.net/"
                 >Skyscanner</a
               >
+              - Barcelona
             </p>
             <p>
               Full-stack development of internal advertising & sponsored content
               platforms.
             </p>
             <ul>
-              <li>Architecture design & guidance</li>
+              <li>System architecture design</li>
               <li>Development of various microservices (Java, Node.js, AWS)</li>
               <li>
                 Leading projects to integrate advertising & sponsored content
@@ -72,6 +78,9 @@
               <li>
                 Leading projects to integrate advertising & sponsored content
                 into web applications (React, Node.js)
+              </li>
+              <li>
+                Working with teams from different offices throughout the world
               </li>
             </ul>
           </section>
@@ -90,6 +99,7 @@
               <a rel="nofollow" href="https://www.skyscanner.net/"
                 >Skyscanner</a
               >
+              - Barcelona
             </p>
             <p>
               Full-stack development of various systems to integrate regional
@@ -119,6 +129,7 @@
             </header>
             <p class="company">
               <a rel="nofollow" href="https://fath.om/">Fathom London Ltd</a>
+              - London
             </p>
             <ul>
               <li>
@@ -143,11 +154,13 @@
               <a rel="nofollow" href="https://www.abehr.com/oe-foundation">
                 OpenEyes Foundation
               </a>
+              - London
             </p>
             <ul>
               <li>
-                Full-stack development (LAMP) of an open-source Electronic
-                Patient Record system used by the Moorfields Eye Hospital
+                Working for a not-for-profit charity, doing full-stack
+                development (LAMP) of an open-source Electronic Patient Record
+                system used by the Moorfields Eye Hospital
               </li>
               <li>
                 Development of a MVP SPA (AngularJS) in collaboration with a
@@ -167,9 +180,10 @@
               </p>
             </header>
             <p class="title">
-              <a rel="nofollow" href="https://www.possible.com/">
+              <a rel="nofollow" href="https://www.wpp.com/companies/possible">
                 Possible Worldwide
               </a>
+              - London
             </p>
             <ul>
               <li>
@@ -191,9 +205,10 @@
               </p>
             </header>
             <p class="title">
-              <a rel="nofollow" href="https://www.possible.com/"
+              <a rel="nofollow" href="https://www.wpp.com/companies/possible"
                 >Fortune Cookie</a
               >
+              (Acquired by WPP) - London
             </p>
             <ul>
               <li>Front-end development on various high profile websites</li>
@@ -215,6 +230,7 @@
               <a rel="nofollow" href="https://www.uxblondon.com/">
                 Hoop Associates
               </a>
+              - London
             </p>
             <ul>
               <li>Full-stack development (LAMP)</li>
@@ -236,6 +252,7 @@
               <a rel="nofollow" href="https://www.uxblondon.com/">
                 Hoop Associates
               </a>
+              - London
             </p>
             <ul>
               <li>Full-stack development (LAMP)</li>
@@ -255,7 +272,12 @@
                 Feb 2007 &ndash; Dec 2007
               </p>
             </header>
-            <p class="company">Franz du Plessis Advertising and Design</p>
+            <p class="company">
+              <a href="https://rocketfishdesign.com/"
+                >Franz du Plessis Advertising and Design</a
+              >
+              - Johannesburg
+            </p>
             <ul>
               <li>Full-stack development (LAMP)</li>
               <li>
@@ -277,20 +299,21 @@
               <a rel="nofollow" href="https://www.slam.nhs.uk/"
                 >NHS Trust Recruitment Campaigns Team</a
               >
+              - London
             </p>
             <ul>
               <li>
                 Carry out the specifications of the HR Recruitment Procedures
               </li>
               <li>
-                I joined as a temp and was able to understand and improve on the
-                various HR processes. I created a procedure handbook which was
-                used for a while after I left.
+                I joined as a temporary worker and as I began to understand the
+                various HR processes I was able to suggest ways to improve the
+                workflow, and created a procedure handbook which was well
+                received and used long after I left.
               </li>
               <li>
-                I enjoyed this role as I could see the outcome of my efforts by
-                getting great feedback from nurses who appreciated me helping
-                them through the various processes to get employed by the NHS.
+                I specifically enjoyed this role as it gave me useful insight
+                into the value of feedback and appreciation of a job well done.
               </li>
               <li>
                 While doing this role I decided I wanted to pursue a career in
@@ -311,7 +334,12 @@
               </p>
             </header>
             <p class="company">
-              <a rel="nofollow" href="https://www.csir.co.za/">CSIR</a>
+              <a
+                rel="nofollow"
+                href="https://www.csir.co.za/future-production-mining"
+                >CSIR</a
+              >
+              - Johannesburg
             </p>
             <ul>
               <li>
@@ -330,7 +358,9 @@
           <section class="content-block">
             <header class="header">
               <div class="overview">
-                <h3 class="company">Computer Training Institute, South Africa</h3>
+                <h3 class="company">
+                  Computer Training Institute, South Africa
+                </h3>
               </div>
               <p class="date">
                 Jan 2006 &ndash; Jan 2007
@@ -419,7 +449,7 @@
         <div class="content-block">
           <p>
             Whilst most of my best work is private & owned by the companies I've
-            worked for, I do occasionally find the time to works on personal
+            worked for, I do occasionally find the time to work on personal
             projects:
           </p>
           <ul>
@@ -429,7 +459,7 @@
                 href="https://github.com/badsyntax/vscode-gradle"
                 >vscode-gradle</a
               >
-              (Java, TypeScript, Node.js)
+              (Java, TypeScript, gRPC, Node.js)
             </li>
             <li>
               <a
@@ -463,7 +493,7 @@
               <a rel="nofollow" href="https://github.com/badsyntax/map-route"
                 >map-route</a
               >
-              (Knockout.js, PHP)
+              (Knockout.js, PHP, MySQL)
             </li>
             <li>
               <a rel="nofollow" href="https://github.com/badsyntax/SassBeautify"
@@ -515,7 +545,7 @@
               <a rel="nofollow" href="https://github.com/proxima-cms"
                 >proxima-cms</a
               >
-              (PHP)
+              (PHP, MySQL)
             </li>
             <li>
               <a
@@ -561,7 +591,7 @@
           <ul>
             <li>DOB: 28<sup>th</sup> September 1983</li>
             <li>Place of Birth: Johannesburg, South Africa</li>
-            <li>Nationality: South African/British</li>
+            <li>Nationality: South African & British</li>
             <li>Languages: Proficient in English</li>
           </ul>
           <h3>Photos</h3>
