--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             <header class="header">
               <div class="overview">
                 <h3 class="company">
-                  Computer Training Institute, South Africa
+                  Computer Training Institute, Johannesburg
                 </h3>
               </div>
               <p class="date">
@@ -379,7 +379,7 @@
             <header class="header">
               <div class="overview">
                 <h3 class="company">
-                  St David’s Marist Brothers, South Africa
+                  St David’s Marist Brothers, Johannesburg
                 </h3>
               </div>
               <p class="date">
