--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
                 Jul 2013 &ndash; Oct 2014
               </p>
             </header>
-            <p class="title">
-              <a rel="nofollow" href="https://www.abehr.com/oe-foundation">
-                OpenEyes Foundation
-              </a>
+            <p class="company">
+              <a rel="nofollow" href="https://www.abehr.com/oe-foundation"
+                >OpenEyes Foundation</a
+              >
               - London
             </p>
             <ul>
@@ -179,10 +179,10 @@
                 Sep 2012 &ndash; Jun 2013
               </p>
             </header>
-            <p class="title">
-              <a rel="nofollow" href="https://www.wpp.com/companies/possible">
-                Possible Worldwide
-              </a>
+            <p class="company">
+              <a rel="nofollow" href="https://www.wpp.com/companies/possible"
+                >Possible Worldwide</a
+              >
               - London
             </p>
             <ul>
@@ -204,7 +204,7 @@
                 Sep 2010 &ndash; Aug 2012
               </p>
             </header>
-            <p class="title">
+            <p class="company">
               <a rel="nofollow" href="https://www.wpp.com/companies/possible"
                 >Fortune Cookie</a
               >
@@ -226,10 +226,10 @@
                 Aug 2009 &ndash; Aug 2010
               </p>
             </header>
-            <p class="title">
-              <a rel="nofollow" href="https://www.uxblondon.com/">
-                Hoop Associates
-              </a>
+            <p class="company">
+              <a rel="nofollow" href="https://www.uxblondon.com/"
+                >Hoop Associates</a
+              >
               - London
             </p>
             <ul>
@@ -248,10 +248,10 @@
                 Feb 2008 &ndash; Aug 2009
               </p>
             </header>
-            <p class="title">
-              <a rel="nofollow" href="https://www.uxblondon.com/">
-                Hoop Associates
-              </a>
+            <p class="company">
+              <a rel="nofollow" href="https://www.uxblondon.com/"
+                >Hoop Associates</a
+              >
               - London
             </p>
             <ul>
